--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,5 @@
 plugins {
-	id 'java'
+    id 'java'
 }
 
 group = 'org.wcci'
@@ -7,16 +7,17 @@ version = '0.0.1-SNAPSHOT'
 sourceCompatibility = '11'
 
 repositories {
-	mavenCentral()
+    mavenCentral()
 }
 
 dependencies {
-	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.+'
-	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.+'
-	testCompile 'org.assertj:assertj-core:3.+'
-	testCompile 'org.mockito:mockito-core:2.+'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.+'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.+'
+    testCompile 'org.assertj:assertj-core:3.+'
+    testCompile 'org.mockito:mockito-core:2.+'
+    compile group: 'com.google.guava', name: 'guava', version: '28.2-jre'
 }
 
 test {
-	useJUnitPlatform()
+    useJUnitPlatform()
 }
